# now-collector

./: Cargo.toml  config.example.yml  flake.nix
.github/workflows/: build.yml
src/: collector.rs  config.rs  lib.rs  main.rs  server.rs
