[package]
name = "now-collector"
version = "0.2.0"
edition = "2018"
authors = ["The now-collector Authors <oss@nyantec.com>"]
description = "A service that retains the latest state of data from various sources"
license = "MirOS"

[dependencies]
env_logger = "0.9"
log = "0.4"
serde_yaml = "0.8"
serde_json = "1.0"
anyhow = "1.0"
getopts = "0.2"
miniz_oxide = "0.5"

[dependencies.hyper]
version = "0.14"
features = ["server", "http1", "tcp"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.13"
features = ["net", "macros", "rt-multi-thread", "fs", "sync"]
